--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
     src: url('Sextape.ttf') format("truetype");
   }
 
-  
+html{
+    height: 100%;
+}  
 
 body{
     margin: 0;
     display: flex;
+    height: 100%;
 }
 
 
@@ -46,27 +49,64 @@ img {
 .signup-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 3vw;
     background-color: rgb(62, 0, 68);
     color: #83EEFF ;
     font-family: 'Jura';
     font-weight: 600;
 }
 
+.intro {
+    font-size: 19px;
+    padding: 4vh;
+    margin-top: 6vh;
+    margin-bottom: 2vh ;
+}
+
 .form-container {
+    justify-self: center;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    row-gap: 20px;
+    justify-content: flex-start;
+    background-color: rgb(75, 25, 122);
+    padding: 4vw;
+    box-shadow: 0 0 15px rgb(75, 25, 122);
 }
 
 label {
     display: flex;
     flex-direction: column;
-    margin: 10px;
+    margin: 0px 50px 0px 0;
 }
 
 label > input {
-    margin-top: 3px;
-    width: 20vw;
+    margin-top: 6px;
+    width: 18vw;
+    border-radius: 5px;
+    border: 3px solid #83EEFF ;
+    box-shadow: 0 0 14px #83EEFF;
+    background-color: #f9c2ff;
+
+}
+
+
+label>input:invalid:not(:placeholder-shown){
+    border: 3px solid rgb(255, 0, 123);
+    box-shadow: 0 0 14px rgb(255, 0, 123);
+}
+
+label>input:focus{
+    outline: none;
+    margin-top: 6px;
+    width: 18vw;
+    border-radius: 5px;
+    border: 3px solid #1FFF0F  ;
+    box-shadow: 0 0 14px #1FFF0F;
+    background-color: #f9c2ff;
+}
+
+button {
+    margin: 3vh 4vw;
+    padding: 1vh 1vw;
+    border-radius: 10px;
 }
